--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="keywords" content="investir en bourse" />
 <title>Comment analyser une entreprise pour investir en bourse?</title>
 <meta name="description" content=" Comment  investir  en  bourse  avec  confiance,  quand  vous entendez  tout  et  son  contraire,  sans  compter  les  journalistes financiers, qui tirent systématiquement sur la sonnette d’alarme. ">
-<link rel="canonical" href="#">
+<link rel="canonical" href="https://investissement-en-bourse.netlify.app/">
 <style type="text/css">
 /*! 
  * Base CSS for pdf2htmlEX
